force-app/main/default/objects/FS_FET_Airwatch_Data_Mapping__c/FS_FET_Airwatch_Data_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FET Airwatch  Data Mapping</label>
</CustomObject>