force-app/main/default/objects/FS_FET_Airwatch_Data_Mapping__c/fields/FS_Active__c.field-meta.xml
<CustomField>
    <fullName>FS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field lets the developer know whether the given brand is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>