force-app/main/default/objects/FS_FET_Airwatch_Data_Mapping__c/fields/FS_FET_Value__c.field-meta.xml
<CustomField>
    <fullName>FS_FET_Value__c</fullName>
    <label>FET Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>