force-app/main/default/objects/FS_FET_Airwatch_Data_Mapping__c/fields/FS_Field_name__c.field-meta.xml
<CustomField>
    <fullName>FS_Field_name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>