force-app/main/default/objects/FS_FET_Airwatch_Data_Mapping__c/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>NAME</columns>
    <columns>FS_Field_name__c</columns>
    <columns>FS_FET_Value__c</columns>
    <columns>FS_Airwatch_Value__c</columns>
    <columns>FS_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>